[gd_scene load_steps=5 format=3 uid="uid://bbl2bgo2gqf4i"]

[ext_resource type="Script" path="res://scripts/terrain_1.gd" id="1_gj6gk"]
[ext_resource type="PackedScene" uid="uid://iyvo05vmqofp" path="res://scenes/groundline.tscn" id="1_qxtux"]
[ext_resource type="PackedScene" uid="uid://crjmbolo875jm" path="res://scenes/waterline.tscn" id="2_24qvj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4pbcj"]
size = Vector2(238, 20)

[node name="terrain_1" type="Node2D"]
script = ExtResource("1_gj6gk")

[node name="groundline" parent="." instance=ExtResource("1_qxtux")]

[node name="Line" parent="groundline" index="0"]
is_left = true

[node name="Timer" parent="groundline/Line" index="0"]
wait_time = 0.755

[node name="groundline2" parent="." instance=ExtResource("1_qxtux")]
position = Vector2(2.08165e-12, -16)

[node name="Timer" parent="groundline2/Line" index="0"]
wait_time = 0.7

[node name="waterline" parent="." instance=ExtResource("2_24qvj")]
position = Vector2(2.08165e-12, -32)

[node name="Line" parent="waterline" index="0"]
is_left = true

[node name="Timer" parent="waterline/Line" index="0"]
wait_time = 1.509

[node name="groundline3" parent="." instance=ExtResource("1_qxtux")]
position = Vector2(2.08165e-12, -48)

[node name="Timer" parent="groundline3/Line" index="0"]
wait_time = 1.5

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(119, 75)
shape = SubResource("RectangleShape2D_4pbcj")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]

[editable path="groundline"]
[editable path="groundline/Line"]
[editable path="groundline2"]
[editable path="groundline2/Line"]
[editable path="waterline"]
[editable path="waterline/Line"]
[editable path="groundline3"]
[editable path="groundline3/Line"]
